Increase header font size and fix shortcut icon alignment (#5292)

--- a/ui/web_modules/sourcegraph/blob/styles/Monaco.css
+++ b/ui/web_modules/sourcegraph/blob/styles/Monaco.css
@@ -474,6 +474,7 @@
 	background-color: white !important;
 	position: relative;
 	overflow: visible !important;
+	font-size: 16px;
 }
 
 :global .vs-dark .monaco-workbench {
